@@ -1,7 +1,7 @@
-# This Build.PL for Catmandu-Importer-getJSON was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.015.
+# This Build.PL for Catmandu-Importer-getJSON was generated by Dist::Zilla::Plugin::ModuleBuildTiny 0.010.
 use strict;
 use warnings;
 
 use v5.10.1;
-use Module::Build::Tiny 0.034;
+use Module::Build::Tiny 0.039;
 Build_PL();
