@@ -1,10 +1,10 @@
 {
    "abstract" : "load JSON-encoded data from a server using a GET HTTP request",
    "author" : [
-      "Jakob Vo\u00df"
+      "Jakob Voß"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Dist::Milla version v1.0.17, Dist::Zilla version 6.008, CPAN::Meta::Converter version 2.150005",
+   "generated_by" : "Dist::Zilla version 5.036, Dist::Milla version v1.0.15, CPAN::Meta::Converter version 2.150001",
    "license" : [
       "perl_5"
    ],
@@ -15,23 +15,23 @@
    "name" : "Catmandu-Importer-getJSON",
    "no_index" : {
       "directory" : [
-         "eg",
-         "examples",
+         "t",
+         "xt",
          "inc",
          "share",
-         "t",
-         "xt"
+         "eg",
+         "examples"
       ]
    },
    "prereqs" : {
       "configure" : {
          "requires" : {
-            "Module::Build::Tiny" : "0.034"
+            "Module::Build::Tiny" : "0.039"
          }
       },
       "develop" : {
          "requires" : {
-            "Dist::Milla" : "v1.0.17",
+            "Dist::Milla" : "v1.0.15",
             "Test::Pod" : "1.41"
          }
       },
@@ -50,21 +50,21 @@
    "release_status" : "stable",
    "resources" : {
       "bugtracker" : {
-         "web" : "https://github.com/phochste/Catmandu-Importer-getJSON/issues"
+         "web" : "https://github.com/nichtich/Catmandu-Importer-getJSON/issues"
       },
-      "homepage" : "https://github.com/phochste/Catmandu-Importer-getJSON",
+      "homepage" : "https://github.com/nichtich/Catmandu-Importer-getJSON",
       "repository" : {
          "type" : "git",
-         "url" : "https://github.com/phochste/Catmandu-Importer-getJSON.git",
-         "web" : "https://github.com/phochste/Catmandu-Importer-getJSON"
+         "url" : "https://github.com/nichtich/Catmandu-Importer-getJSON.git",
+         "web" : "https://github.com/nichtich/Catmandu-Importer-getJSON"
       }
    },
-   "version" : "0.50",
+   "version" : "0.51",
    "x_contributors" : [
       "bayashi <bayashi@cpan.org>",
-      "Jakob Vo\u00df <jakob.voss@gbv.de>",
+      "Jakob Voß <jakob.voss@gbv.de>",
+      "Patrick Hochstenbach <patrick.hochstenbach@ugent.be>",
       "Vitali Peil <vpeil@cpan.org>"
-   ],
-   "x_serialization_backend" : "Cpanel::JSON::XS version 4.08"
+   ]
 }
 
